@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: soap.c,v 1.156.2.3 2005/09/12 08:24:00 dmitry Exp $ */
+/* $Id: soap.c,v 1.156.2.4 2005/09/27 15:25:09 dmitry Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -4018,9 +4018,21 @@ static xmlNodePtr serialize_zval(zval *val, sdlParamPtr param, char *paramName, 
 {
 	xmlNodePtr xmlParam;
 	encodePtr enc;
+	zval defval;
 
 	if (param != NULL) {
 		enc = param->encode;
+		if (val == NULL || Z_TYPE_P(val) == IS_NULL) {
+			if (param->element) {
+				if (param->element->fixed) {
+					ZVAL_STRING(&defval, param->element->fixed, 0);
+					val = &defval;
+				} else if (param->element->def && !param->element->nillable) {
+					ZVAL_STRING(&defval, param->element->def, 0);
+					val = &defval;
+				}
+			}
+		}
 	} else {
 		enc = NULL;
 	}
