@@ -1,0 +1,42 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<definitions name="wsdl" targetNamespace="urn:wsdl"
+xmlns:typens="urn:wsdl" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+xmlns:soap="http://schemas.xmlsoap.org/wsdl/soap/"
+xmlns:soapenc="http://schemas.xmlsoap.org/soap/encoding/"
+xmlns:wsdl="http://schemas.xmlsoap.org/wsdl/"
+xmlns="http://schemas.xmlsoap.org/wsdl/">
+	<types>
+		<xsd:schema xmlns="http://www.w3.org/2001/XMLSchema" targetNamespace="urn:wsdl">
+			<xsd:element name="opt" type="xsd:string" default="zzz" />
+		</xsd:schema>
+	</types>
+	<message name="get_it">
+		<part name="opt" element="typens:opt"/>
+	</message>
+	<message name="get_itResponse">
+		<part name="return" type="xsd:string"/>
+	</message>
+	<portType name="fpPortType">
+		<operation name="get_it">
+			<input message="typens:get_it"/>
+			<output message="typens:get_itResponse"/>
+		</operation>
+	</portType>
+	<binding name="fpBinding" type="typens:fpPortType">
+		<soap:binding style="rpc" transport="http://schemas.xmlsoap.org/soap/http"/>
+		<operation name="get_it">
+			<soap:operation soapAction="urn:fpAction"/>
+			<input>
+				<soap:body namespace="urn:wsdl" use="encoded" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"/>
+			</input>
+			<output>
+				<soap:body namespace="urn:wsdl" use="encoded" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"/>
+			</output>
+		</operation>
+	</binding>
+	<service name="wsdlService">
+		<port name="fpPort" binding="typens:fpBinding">
+			<soap:address location="**********"/>
+		</port>
+	</service>
+</definitions>
